[tool.poetry]
name = "cv-tools"
version = "0.1.0"
description = ""
authors = ["Jangwon Seo <nanpuhaha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.5.3"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
black = "^21.9b0"
mypy = "^0.910"
pytest = "^6.2.5"
coverage = "^5.5"
pytest-cov = "^2.12.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
